# UWS-AGP-group-project

./: .gitattributes  .gitignore  CMakeLists.txt  DrawableObject.cpp  DrawableObject.h  Game.cpp  Game.h  Light.cpp  Light.h  Mesh.cpp  Mesh.h  MotionBlurEffect.cpp  MotionBlurEffect.h  Player.cpp  Player.h  README.md  Shader.cpp  Shader.h  agp_group_project.sln  agp_group_project.vcxproj  agp_group_project.vcxproj.filters  assetsLoader.cpp  assetsLoader.h  assetsPaths.h  constants.h  cube.h  main.cpp  md2model.cpp  md2model.h  rt3d.cpp  rt3d.h  rt3dObjLoader.h  sdlUtils.cpp  sdlUtils.h
assets/: tris.MD2
shaders/: blended.frag  blended.vert  cubeMap.frag  cubeMap.vert  depth.frag  depth.vert  gouraud-tex.frag  gouraud-tex.vert  motionBlur.frag  motionBlur.vert  passthrough.frag  passthrough.vert  phong-tex.frag  phong-tex.vert  reflection-tex.frag  reflection-tex.vert  screenQuad.frag  screenQuad.vert  shadowMap.frag  shadowMap.vert  textured.frag  textured.vert  toon.frag  toon.vert
